[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level1.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/backgrounds/background1.png" type="Texture" id=5]
[ext_resource path="res://RedPlanet.tscn" type="PackedScene" id=6]
[ext_resource path="res://PurplePlanet.tscn" type="PackedScene" id=7]
[ext_resource path="res://Main.gd" type="Script" id=8]
[ext_resource path="res://Assets/sfx/clang.wav" type="AudioStream" id=10]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 5 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 16.0
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 1, 0.901961, 0.701961, 1 )
fog_depth_begin = 25.0
fog_depth_end = 35.0
dof_blur_far_distance = 20.0
dof_blur_far_transition = 10.0
glow_levels/1 = true
glow_intensity = 0.2
glow_strength = 1.67
glow_blend_mode = 1
glow_hdr_scale = 1.83

[node name="Main" type="Spatial"]
script = ExtResource( 8 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.7442, 21.7148 )

[node name="Level1" parent="." instance=ExtResource( 2 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="RedPlanet" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5026, 12.7261, 5.16714 )

[node name="PurplePlanet" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.62313, 13.9857, 6.14524 )

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="RestartPosTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="AudioStreamPlayer_Generic" type="AudioStreamPlayer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="Audio_Clang" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="StartPosition" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.718485, 6.49423, -276.328 )

[node name="VictoryMusic" type="AudioStreamPlayer" parent="."]

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 4.0
[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
[connection signal="timeout" from="RestartPosTimer" to="." method="_on_RestartPosTimer_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
